fix: use fixed width for admin sidebar and add tooltips on small viewports (#1817)

--- a/ui/src/styles/SideBar.css
+++ b/ui/src/styles/SideBar.css
@@ -1,5 +1,10 @@
+:root {
+  --sidebar-width-collapsed: 50px;
+  --sidebar-width-expanded: 190px;
+}
+
 .sidebar {
-  min-width: 50px;
+  min-width: var(--sidebar-width-collapsed);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -54,4 +59,42 @@
 
 .sidebar .nav-link.disabled {
   color: #999;
+}
+
+/* fixed sidebar width on viewports > sm */
+.navbar-brand,
+#sidebarMenu {
+  width: var(--sidebar-width-expanded) !important;
+  flex: 0 0 var(--sidebar-width-expanded) !important;
+  max-width: var(--sidebar-width-expanded) !important;
+}
+
+.navbar-brand img {
+  margin: 0 auto;
+}
+
+main[role="main"] {
+  width: calc(100% - var(--sidebar-width-expanded)) !important;
+  flex: 0 0 calc(100% - var(--sidebar-width-expanded)) !important;
+  max-width: calc(100% - var(--sidebar-width-expanded)) !important;
+}
+
+/* fixed sidebar width on viewports xs + sm */
+@media (max-width: 767.98px) {
+  .navbar-brand,
+  #sidebarMenu {
+    width: var(--sidebar-width-collapsed) !important;
+    flex: 0 0 var(--sidebar-width-collapsed) !important;
+    max-width: var(--sidebar-width-collapsed) !important;
+  }
+
+  .navbar-brand img {
+    margin: 0 auto;
+  }
+
+  main[role="main"] {
+    width: calc(100% - var(--sidebar-width-collapsed)) !important;
+    flex: 0 0 calc(100% - var(--sidebar-width-collapsed)) !important;
+    max-width: calc(100% - var(--sidebar-width-collapsed)) !important;
+  }
 }
